Move button up, collapsed expand below to solve the overflow button jumping on js transform

--- a/media/com_code/css/default.css
+++ b/media/com_code/css/default.css
@@ -53,7 +53,11 @@ span.commit-owner {
     font-weight: bold;
 }
 
-/* Advanced search chosen overflow fixes */
+/* Advanced search chosen overflow fixes  and button margin-bottom */
+
+button#adv-search-button {
+  margin-bottom: 1em;
+}
 
 #filters-advanced.overflow {
 	overflow: visible;
